added student photos

--- a/gauntlet.html
+++ b/gauntlet.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gauntlet 2024 | NewSpring.cc</title>
+  <title>Gauntlet 2024 | NewSpring.cc
+  </title>
 
   <!-- jQuery -->
   <script
@@ -42,6 +43,15 @@
   <link rel="stylesheet" href="./Themes/new/Styles/bootstrap.css" />
   <link rel="stylesheet" href="./Themes/new/Styles/theme.css" />
   <link rel="stylesheet" href="./Themes/new/Styles/gauntlet.css" />
+
+  <link rel="apple-touch-icon" sizes="180x180"
+    href="/Themes/new/Assets/Images/gauntlet/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="/Themes/new/Assets/Images/gauntlet/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16"
+    href="/Themes/new/Assets/Images/gauntlet/favicons/favicon-16x16.png">
+  <link rel="manifest"
+    href="/Themes/new/Assets/Images/gauntlet/favicons/site.webmanifest">
 </head>
 
 <body id="top" class="bg-black">
@@ -265,45 +275,45 @@
         <div class="page-constrained mx-auto bring-forward">
           <div
             class="d-grid grid-cols-md-2 grid-cols-lg-4 gap-5 gap-md-7 text-left">
-            <div class="mt-lg-7" data-aos="fade-up">
+            <div class="mt-lg-7" data-aos="fade-up" data-aos-delay="200">
               <div
                 class="ratio-square background-cover background-center rounded mb-5"
                 style="background-image: url('https://s3.amazonaws.com/ns.images/newspring/Gauntlet/2024/gauntlet_worship_1x1.jpg');">
               </div>
-              <h3 class="text-secondary font-black mb-2">Worship</h3>
+              <h3 class="text-blue font-black mb-2">Worship</h3>
               <p>We believe that worship invites the
                 presence of God,
                 and we can’t wait to encounter God as we worship
                 together.</p>
             </div>
-            <div class="mt-xl-8" data-aos="fade-up" data-aos-delay="100">
+            <div class="mt-xl-8" data-aos="fade-up" data-aos-delay="300">
               <div
                 class="ratio-square background-cover background-center rounded mb-5"
                 style="background-image: url('https://s3.amazonaws.com/ns.images/newspring/Gauntlet/2024/gauntlet_teaching_1x1.jpg');">
               </div>
-              <h3 class="text-secondary font-black mb-2">Teaching</h3>
+              <h3 class="text-fuscia font-black mb-2">Teaching</h3>
               <p>Each session is led by pastors and
                 teachers who are
                 passionate about sharing God’s Word and discipling a
                 generation into a lifetime of following Jesus.</p>
             </div>
-            <div class="mt-lg-7" data-aos="fade-up" data-aos-delay="200">
+            <div class="mt-lg-7" data-aos="fade-up" data-aos-delay="400">
               <div
                 class="ratio-square background-cover background-center rounded mb-5"
                 style="background-image: url('https://s3.amazonaws.com/ns.images/newspring/Gauntlet/2024/gauntlet_smallgroups_1x1.jpg');">
               </div>
-              <h3 class="text-secondary font-black mb-2">Small Groups</h3>
+              <h3 class="text-teal font-black mb-2">Small Groups</h3>
               <p>Students will spend time forming lifelong
                 and
                 encouraging friendships in small groups and larger
                 community groups.</p>
             </div>
-            <div class="mt-xl-8" data-aos="fade-up" data-aos-delay="300">
+            <div class="mt-xl-8" data-aos="fade-up" data-aos-delay="500">
               <div
                 class="ratio-square background-cover background-center rounded mb-5"
                 style="background-image: url('https://s3.amazonaws.com/ns.images/newspring/Gauntlet/2024/gauntlet_fun_1x1.jpg');">
               </div>
-              <h3 class="text-secondary font-black mb-2">Fun</h3>
+              <h3 class="text-orange font-black mb-2">Fun</h3>
               <p>Every student at Gauntlet will be part of
                 high-energy
                 team competitions, engaging activities, and daily free
@@ -393,12 +403,13 @@
             class="text-slate">Grab your spot today!</span>
         </h2>
         <div
-          class="d-flex flex-column flex-lg-row gap-3 justify-content-center align-items-center mb-5 bring-forward">
+          class="d-flex flex-column flex-lg-row gap-3 justify-content-center align-items-center mb-5 bring-forward"
+          data-aos="fade-up">
           <div class="position-relative">
             <select name="campus" id=""
               class="d-inline-block border-0 bg-white py-3 px-5 pr-7 outline-none rounded-full text-gray-darker"
               style="-webkit-appearance: none;
-          " data-aos="fade-up">
+          ">
               <option value="">Choose Your Campus</option>
               <option value="akn">Aiken</option>
               <option value="and">Anderson</option>
@@ -473,57 +484,55 @@
 
 
 
-    <section id="give"
-      class="position-relative bg-beige text-center text-md-left">
+    <section id="give" class="position-relative bg-beige overflow-hidden">
       <div class="fullscreen background-fixed background-center o-100"
         style="background-image: url('/Themes/new/Assets/Images/christmas_texture1.png'); z-index: 1;">
       </div>
-      <div class="page-constrained mx-auto mb-6 mb-md-8">
-        <h2 class="display-2 text-center">Give to Gauntlet</h2>
-      </div>
-      <div class="page-constrained mx-auto">
-        <div class="d-grid grid-cols-lg-2 gap-7 gap-md-8 align-items-center">
-          <div>
-            <p>Gauntlet would not be possible without the generous support of
-              our
-              NewSpring family. In fact, <span class="text-orange">the cost of
-                every single student ticket is discounted – even those who pay
-                full price.</span> We supplement the cost of youth camp because
-              we
-              believe in the next generation, and we want to provide them a
-              space
-              to encounter God in a unique way this summer.</p>
-            <p class="mb-0 bring-forward"><a href="#"
-                class="btn btn-primary">Give
-                Now</a></p>
+      <img
+        src="https://s3.amazonaws.com/ns.images/newspring/Gauntlet/2024/gauntlet_cutout_5.png"
+        alt="" class="hidden-xs hidden-sm hidden-md bring-forward" id="cutout_5"
+        data-aos="fade-left" data-aos-delay="300">
+      <img
+        src="https://s3.amazonaws.com/ns.images/newspring/Gauntlet/2024/gauntlet_cutout_6.png"
+        alt="" class="hidden-xs hidden-sm hidden-md bring-forward" id="cutout_6"
+        data-aos="fade-right" data-aos-delay="300">
+      <div class="text-constrained mx-auto text-center px-lg-7 px-xl-8">
+        <h2 class="display-2 text-center mb-lg-6">Give to Gauntlet</h2>
+        <p>Gauntlet would not be possible without the generous support of
+          our
+          NewSpring family. In fact, <span class="text-orange">the cost of
+            every single student ticket is discounted – even those who pay
+            full price.</span> We supplement the cost of youth camp because
+          we
+          believe in the next generation, and we want to provide them a
+          space
+          to encounter God in a unique way this summer.</p>
+
+        <div class="d-grid grid-cols-6 gap-x-5 text-left">
+          <div class="col-span-6" data-aos="fade-up">
+            <h3 class="h5 font-black text-secondary">Total Given</h3>
+            <h4 class="display-2">
+              $<span data-purecounter-start="0" data-purecounter-end="338992.81"
+                data-purecounter-decimals="2" class="purecounter"> 0 </span>
+            </h4>
           </div>
-          <div>
-            <div class="d-grid grid-cols-6 gap-x-5 text-left">
-              <div class="col-span-6" data-aos="fade-up">
-                <h3 class="h5 font-black text-secondary">Total Given</h3>
-                <h4 class="display-2">
-                  $<span data-purecounter-start="0"
-                    data-purecounter-end="338992.81"
-                    data-purecounter-decimals="2" class="purecounter"> 0 </span>
-                </h4>
-              </div>
-              <div class="col-span-3" data-aos="fade-up">
-                <h3 class="h5 font-black text-secondary">Unique Givers</h3>
-                <h4 class="display-3">
-                  <span data-purecounter-start="0" data-purecounter-end="225"
-                    class="purecounter"> 0 </span>
-                </h4>
-              </div>
-              <div class="col-span-3" data-aos="fade-up">
-                <h3 class="h5 font-black text-secondary">Days Left</h3>
-                <h4 class="display-3">
-                  <span data-purecounter-start="0" data-purecounter-end="121"
-                    class="purecounter"> 0 </span>
-                </h4>
-              </div>
-            </div>
+          <div class="col-span-3" data-aos="fade-up">
+            <h3 class="h5 font-black text-secondary">Unique Givers</h3>
+            <h4 class="display-3">
+              <span data-purecounter-start="0" data-purecounter-end="225"
+                class="purecounter"> 0 </span>
+            </h4>
+          </div>
+          <div class="col-span-3" data-aos="fade-up">
+            <h3 class="h5 font-black text-secondary">Days Left</h3>
+            <h4 class="display-3">
+              <span data-purecounter-start="0" data-purecounter-end="121"
+                class="purecounter"> 0 </span>
+            </h4>
           </div>
         </div>
+        <p class="mb-0 bring-forward"><a href="#" class="btn btn-primary">Give
+            Now</a></p>
       </div>
     </section>
 
@@ -1004,25 +1013,40 @@
       style="background-image: url('/Themes/new/Assets/Images/christmas_texture1.png'); z-index: 1;">
     </div>
     <div class="d-grid grid-cols-1 grid-cols-lg-9 gap-y-5 gap-x-8">
-      <div class="col-span-lg-5">
-        <h2 class="display-2">Frequently Asked Questions</h2>
-        <p>Anim fugiat mollit magna irure sit non veniam qui sunt commodo
-          proident cupidatat aliquip laboris.</p>
-        <span
-          class="wistia_embed wistia_async_yzt065rodt popover=true popoverContent=link playerColor=f05421 wistia_embed_initialized bring-forward d-inline-block"
-          id="wistia-yzt065rodt-1">
-          <div id="wistia_29.thumb_container" class="wistia_click_to_play"
-            data-aos="fade-up">
-            <a href="#" class="btn btn-primary">Play
-              Video <i class="fa-solid fa-play ml-1"></i></a>
-          </div>
-        </span>
-        <script src="https://fast.wistia.com/embed/medias/yzt065rodt.jsonp"
-          async=""></script>
-        <script src="https://fast.wistia.com/assets/external/E-v1.js"
-          async=""></script>
-      </div>
       <div class="col-span-lg-4">
+        <h2 class="display-3">Frequently Asked Questions</h2>
+        <div class="rounded-lg overflow-hidden">
+          <script src="https://fast.wistia.com/embed/medias/onh6y5h5c3.jsonp"
+            async></script>
+          <script src="https://fast.wistia.com/assets/external/E-v1.js"
+            async></script>
+          <div class="wistia_responsive_padding"
+            style="padding:56.25% 0 0 0;position:relative;">
+            <div class="wistia_responsive_wrapper"
+              style="height:100%;left:0;position:absolute;top:0;width:100%;">
+              <span
+                class="wistia_embed wistia_async_onh6y5h5c3 popover=true playerColor=f05421 videoFoam=true"
+                style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span>
+            </div>
+          </div>
+        </div>
+        <div class="hidden">
+          <span
+            class="wistia_embed wistia_async_onh6y5h5c3 popover=true popoverContent=link playerColor=f05421 wistia_embed_initialized bring-forward d-inline-block"
+            id="wistia-onh6y5h5c3-1">
+            <div id="wistia_29.thumb_container" class="wistia_click_to_play"
+              data-aos="fade-up">
+              <a href="#" class="btn btn-primary">Play
+                Video <i class="fa-solid fa-play ml-1"></i></a>
+            </div>
+          </span>
+          <script src="https://fast.wistia.com/embed/medias/onh6y5h5c3.jsonp"
+            async=""></script>
+          <script src="https://fast.wistia.com/assets/external/E-v1.js"
+            async=""></script>
+        </div>
+      </div>
+      <div class="col-span-lg-5">
         <div class="panel-group d-grid grid-cols-1 gap-3 bring-forward mb-0"
           id="faq_accordion" role="tablist" aria-multiselectable="true">
 
@@ -1056,6 +1080,9 @@
         </div>
       </div>
     </div>
+
+
+
     <div class="hidden">
       <div class="bring-forward text-constrained mx-auto mb-6 mb-md-7">
         <h2 class="display-3 text-center">Frequently Asked Questions</h2>
@@ -1221,23 +1248,6 @@
       </div>
     </div>
   </footer>
-
-
-  <div class="hidden d-grid grid-cols-2 grid-cols-md-4 grid-cols-lg-6">
-    <div class="ratio-square bg-fuscia"></div>
-    <div class="ratio-square bg-blue"></div>
-    <div class="ratio-square bg-amber"></div>
-    <div class="ratio-square bg-red"></div>
-    <div class="ratio-square bg-green"></div>
-    <div class="ratio-square bg-yellow"></div>
-    <div class="ratio-square bg-purple"></div>
-    <div class="ratio-square bg-sky"></div>
-    <div class="ratio-square bg-slate"></div>
-    <div class="ratio-square bg-pink"></div>
-    <div class="ratio-square bg-orange"></div>
-    <div class="ratio-square bg-lime"></div>
-  </div>
-
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
