moved logo grid out of its own section

--- a/gauntlet.html
+++ b/gauntlet.html
@@ -320,6 +320,69 @@
                 time.</p>
             </div>
           </div>
+
+          <!-- Condsensed Logo Grid -->
+          <div class="d-grid grid-cols-2 grid-cols-md-4 gap-3 gap-md-4 mt-md-8">
+
+            <div class="d-grid gap-3 gap-md-4" data-aos="fade-up">
+              <div
+                class="p-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden rounded">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/u.svg" alt="">
+              </div>
+              <div
+                class="p-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden rounded bg-blue">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-1-pink.svg" alt="">
+              </div>
+
+
+            </div>
+
+            <div class="d-grid gap-3 gap-md-4" data-aos="fade-up"
+              data-aos-delay="100">
+              <div
+                class="p-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden rounded bg-red">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-4.svg" alt="">
+              </div>
+              <div
+                class="p-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden rounded">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/belong.svg" alt="">
+              </div>
+            </div>
+
+            <div class="d-grid gap-3 gap-md-4" data-aos="fade-up"
+              data-aos-delay="200">
+
+              <div
+                class="p-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden rounded">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/here.svg" alt="">
+              </div>
+              <div
+                class="p-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden rounded bg-yellow">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-2.svg" alt="">
+              </div>
+            </div>
+
+            <div class="d-grid gap-3 gap-md-4" data-aos="fade-up"
+              data-aos-delay="300">
+              <div
+                class="p-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden rounded bg-teal">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-3.svg" alt="">
+              </div>
+              <div
+                class="p-4 p-lg-7 d-flex justify-content-center align-items-center overflow-hidden rounded">
+                <img class="h-auto max-w-full"
+                  src="/Themes/new/Assets/SVG/gauntlet/gs/g-multi.svg" alt="">
+              </div>
+
+            </div>
+          </div>
         </div>
 
 
@@ -327,7 +390,7 @@
       </div>
     </section>
 
-    <section class="bg-beige p-4 p-lg-7 p-xl-9">
+    <section class="hidden bg-beige p-4 p-lg-7 p-xl-9">
       <div class="">
         <!-- Condsensed Logo Grid -->
         <div class="d-grid grid-cols-2 grid-cols-md-4 gap-3 gap-md-4">
