added meta tags for image

--- a/gauntlet.html
+++ b/gauntlet.html
@@ -8,6 +8,11 @@
   <title>Gauntlet 2024 | NewSpring.cc
   </title>
 
+  <meta property="og:image"
+    content="https://s3.amazonaws.com/ns.images/newspring/Gauntlet/2024/2024_gauntlet_hero_2x1.jpg" />
+  <meta name="twitter:image"
+    content="https://s3.amazonaws.com/ns.images/newspring/Gauntlet/2024/2024_gauntlet_hero_2x1.jpg">
+
   <!-- jQuery -->
   <script
     src="https://newspring.cc/Scripts/Bundles/RockJQueryLatest?v=04Na70l5xG-Ak3mWoqN6rMOm3L9-p3kgT_NPfUoJxck1"></script>
